--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Storyteller</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<a href='/'>Return to home</a></br>
-</head>
-<body>
-  <% if current_user %>
-    Welcome <%= current_user.name %>!
-    <%= link_to "Sign Out", signout_path, id: "sign_out" %>
-  <% else %>
-    <%= link_to "Sign in with Facebook!", "/auth/facebook", id: "sign_in" %>
-  <% end %>
-
-<%= yield %>
-
-</body>
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/default.css" />
+    <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <script src="js/modernizr.custom.js"></script>
+    <title>Storyteller</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <a href='/'>Return to home</a>
+    </br>
+  </head>
+  <body>
+    <% if current_user %>
+      Welcome <%= current_user.name %>!
+      <%= link_to "Sign Out", signout_path, id: "sign_out" %>
+    <% else %>
+      <%= link_to "Sign in with Facebook!", "/auth/facebook", id: "sign_in" %>
+    <% end %>
+    <%= yield %>
+  </body>
 </html>
