--- a/app/views/narratives/new.html.erb
+++ b/app/views/narratives/new.html.erb
@@ -1,10 +1,9 @@
-<!-- <h1 align='center'> New Narrative Page </h1> -->
-
-
-<%= render "add_narrative" %>
-
 <!-- Div to show image the new narrative is being written about -->
 <div class='bo'>
-<img src='<%= params[:imgUrl] %>'>
+   <img src='<%= params[:imgUrl] %>'>
+</div>
+
+<div class="newnarrative">
+   <%= render "add_narrative" %>
 </div>
 
