--- a/app/views/narratives/_add_narrative.html.erb
+++ b/app/views/narratives/_add_narrative.html.erb
@@ -4,7 +4,7 @@
   <%= n.text_field :title, :placeholder => "Title of your narrative" %></br>
 
   <%= n.label :story %></br>
-  <%= n.text_area :story, size: "80x30", :placeholder => "Your story goes here" %>
+  <%= n.text_area :story, :placeholder => "Your story goes here" %>
   <%= n.hidden_field :writer_id, :value => 5 %>
 
   <%= n.submit "Submit your Caption" %>
