--- a/app/views/writers/index.html.erb
+++ b/app/views/writers/index.html.erb
@@ -1,24 +1,15 @@
+<h1 align='center'>Select a Storyteller</h1>
+<div class='storytellerlist'>
+   <div class='writerList'>
+     <!-- Display a list of writers with button to view all works by that author-->
+      <% @writers.each do |writer| %>
+         <input type="button" class="specWriterButton" value="<%= writer.name %>" id="<%= writer.id %>">
+      <% end %>
+   </div> <!--class writerList-->
 
-
-<h1 align='center'>The Storytellers List</h1>
-
-
-<div class='writerList'>
-  <!-- Display a list of writers with button to view all works by that author-->
-<% @writers.each do |writer| %>
-  <div class="writerIndex" writerDivId="writerDiv<%= writer.id %>" id="<%= writer.id %>">
-   <h3><%= writer.name %></h3>
-   <input type="button" class="specWriterButton" value="Read stories" id="<%= writer.id %>">
-  </div>
- <% end %>
-</div> <!--class writerList-->
-<div class='ajaxResults'>
-<div class ="specWriterStories" id='listTitle'></div>
-<div class ="specWriterStories">
-
-</div> <!--class specWriterStories-->
+   <div class='ajaxResults'>
+      <div id='listTitle'></div>
+      <div class ="specWriterStories" id='listStories'></div> <!--class specWriterStories-->
+   </div> <!-- class ajax results -->
 </div>
-<!-- class ajax results -->
-
-
 
