--- a/app/assets/stylesheets/writers.css
+++ b/app/assets/stylesheets/writers.css
@@ -7,11 +7,10 @@
 }
 
 .writerList {
-  width: 90%;
   float: top;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 2%
+  margin: 0 auto;
+  padding: 2%;
+  text-align: center
 
 }
 
@@ -45,7 +44,7 @@ h3 {
 }
 
 p {
-  font-size: 30px;
+  font-size: 1em;
 }
 
 
