redirect home page to images index, fixed query parameters to use image ID instead of URL; now uses ID to find image url and set as instance variable

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="../favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/default.css" />
-    <link rel="stylesheet" type="text/css" href="css/component.css" />
+   <!--  <link rel="stylesheet" type="text/css" href="css/default.css" />
+    <link rel="stylesheet" type="text/css" href="css/component.css" /> -->
     <script src="js/modernizr.custom.js"></script>
     <title>Storyteller</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
