--- a/app/views/narratives/new.html.erb
+++ b/app/views/narratives/new.html.erb
@@ -1,6 +1,6 @@
 <!-- Div to show image the new narrative is being written about -->
-<div class='bo'>
-   <img src='<%= params[:imgUrl] %>'>
+<div class='narrimage'>
+   <img src='<%= @imageURL %>'>
 </div>
 
 <div class="newnarrative">
