--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require foundation_and_overrides
+
  *= require_tree .
  */
 
@@ -17,19 +19,12 @@ img {
   height: 300px;
 }
 
-header h1 {
-  color: #16a085;
-}
+
 
 .hidden {
   display: none;
 }
 
-.narrative-form {
-  background-color: #16a085;
-  height: 300px;
-  width: 100px
-}
 
 #pics {
   padding: 20px 20px 100px 20px;
