--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="../favicon.ico">
-   <!--  <link rel="stylesheet" type="text/css" href="css/default.css" />
-    <link rel="stylesheet" type="text/css" href="css/component.css" /> -->
-    <script src="js/modernizr.custom.js"></script>
-    <title>Storyteller</title>
-    <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
+    <title><%= content_for?(:title) ? yield(:title) : "Storyteller" %></title>
+
+    <%= stylesheet_link_tag    "application", :media => "all"  %>
+    <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
-    <a href='/'>Return to home</a>
-    </br>
   </head>
+
   <body>
-    <% if current_user %>
-      Welcome <%= current_user.name %>!
-      <%= link_to "Sign Out", signout_path, id: "sign_out" %>
-    <% else %>
-      <%= link_to "Sign in with Facebook!", "/auth/facebook", id: "sign_in" %>
-    <% end %>
+    <nav class="top-bar" data-topbar>
+      <ul class="title-area">
+        <li class="name">
+          <h1><a href="/">Storyteller</a></h1>
+        </li>
+        <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
+      </ul>
+
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <% if current_user %>
+          <li><a href="/signout">Welcome <%= current_user.name %>!  Click here to sign out</a></li>
+          <% else %>
+
+          <li><a href="#">Sign in</a></li>
+          <li><a href="/auth/facebook">Sign in with Facebook</a></li>
+          <li><a href="/">Create an account</a></li>
+          <% end %>
+        </ul>
+
+        <!-- Left Nav Section -->
+        <ul class="left">
+          <li><a href='/writers'>View All Writers</a></li>
+        </ul>
+      </section>
+
+    </nav>
+<div class-"row">
+</br></div>
     <%= yield %>
+    <%= javascript_include_tag "application" %>
   </body>
 </html>
