--- a/app/views/writers/index.html.erb
+++ b/app/views/writers/index.html.erb
@@ -1,4 +1,4 @@
-<h2 align='center'>Select a Storyteller</h2>
+<h2 align='center'>Select a storyteller</h2>
 
 <div class='small-10 small-centered columns'>
    <ul class="inline-list">
@@ -13,4 +13,7 @@
 
    <ul class='large-block-grid-4' id="writerStories">
    </ul>
+
+   <div id='returnToImages'></div>
 </div>
+
