--- a/app/views/narratives/new.html.erb
+++ b/app/views/narratives/new.html.erb
@@ -2,7 +2,7 @@
 <div class='row'>
   <div class='row'>
     <div class='large-6 large-offset-3 columns'>
-     <h2>Write Your Story for this Image</h2>
+     <h2>Write a story for this image</h2>
     </div>
   </div>
 
